--- a/floating-cubes/style.css
+++ b/floating-cubes/style.css
@@ -48,14 +48,14 @@
 }
 
 .circles div:nth-child(1) {
-  left: 25%;
+  left: 5%;
   width: 80px;
   height: 80px;
   animation-delay: 0s;
 }
 
 .circles div:nth-child(2) {
-  left: 25%;
+  left: 15%;
   width: 80px;
   height: 80px;
   animation-delay: 0s;
@@ -85,15 +85,15 @@
 
 .circles div:nth-child(6) {
   left: 75%;
-  width: 110px;
-  height: 110px;
+  width: 10px;
+  height: 10px;
   animation-delay: 3s;
 }
 
 .circles div:nth-child(7) {
   left: 35%;
-  width: 150px;
-  height: 150px;
+  width: 10px;
+  height: 10px;
   animation-delay: 7s;
 }
 
@@ -114,9 +114,48 @@
 }
 
 .circles div:nth-child(10) {
-  left: 85%;
-  width: 150px;
-  height: 150px;
+  left: 95%;
+  width: 50px;
+  height: 50px;
   animation-delay: 0s;
   animation-duration: 11s;
+}
+
+.circles div:nth-child(11) {
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+.circles div:nth-child(12) {
+  left: 85%;
+  width: 10px;
+  height: 10px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+.circles div:nth-child(13) {
+  left: 50%;
+  width: 45px;
+  height: 45px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles div:nth-child(14) {
+  left: 75%;
+  width: 70px;
+  height: 70px;
+  animation-delay: 5s;
+  animation-duration: 15s;
+}
+
+.circles div:nth-child(14) {
+  left: 75%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5s;
+  animation-duration: 25s;
 }
